# swift-foundation

./: Package.swift
Plugins/RustShimsSourceGenPlugin/: RustShimsSourceGenPlugin.swift
Sources/FoundationEssentials/: Platform.swift  UUID.swift
Sources/FoundationEssentials/Data/: Data+Error.swift  Data+Reading.swift  Data+Writing.swift  Data.swift
Sources/FoundationEssentials/FileManager/: FileManager+Directories.swift  FileManager+Files.swift  FileManager+SymbolicLinks.swift  FileManager+Utilities.swift  FileOperations+Enumeration.swift  FileOperations.swift
Sources/FoundationEssentials/JSON/: JSON5Scanner.swift  JSONDecoder.swift  JSONScanner.swift
Sources/FoundationEssentials/Locale/: Locale_Cache.swift
Sources/FoundationEssentials/ProcessInfo/: ProcessInfo.swift
Sources/FoundationEssentials/PropertyList/: BPlistEncodingFormat.swift  BPlistScanner.swift  PlistDecoder.swift  XMLPlistScanner.swift
Sources/FoundationEssentials/String/: BuiltInUnicodeScalarSet.swift  String+IO.swift  String+Path.swift  StringProtocol+Essentials.swift
Sources/FoundationEssentials/TimeZone/: TimeZone.swift  TimeZone_Cache.swift
Sources/FoundationInternationalization/Locale/: Locale_Cache.swift
Sources/RustShims/: Cargo.toml  build.sh
Sources/RustShims/.cargo/: config.toml
Sources/RustShims/include/: RustShims.h  module.modulemap  rustshims.h
Sources/RustShims/src/: filemanager_shims.rs  lib.rs  platform_shims.rs  string_shims.rs  uuid.rs
Sources/_FoundationInternals/String/: BuiltInUnicodeScalarSet.swift
Tests/FoundationEssentialsTests/: JSONEncoderTests.swift
