[package]
name = "RustShims"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "rustshims"
crate-type = ["staticlib"]

[profile.release]
opt-level = 'z'
lto = true # enable link time optimization
panic = "abort" # disable stack unwinding on panic
strip = true

[profile.dev]
opt-level = 'z'
lto = true # enable link time optimization
panic = "abort" # disable stack unwinding on panic

[dependencies]
libc = "0.2"
